# transcribd

./: .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  COPYING  NEWS  README.md  app.drey.Vocalis.Devel.json  docs-lock.json  docs.json  eslint.config.js  generated-sources.json  gnome-sound-recorder.doap  index.html  io.github.rebreda.Transcribd.Devel.json  io.github.rebreda.Transcribd.json  meson.build  org.gnome.SoundRecorder.json  package-lock.json  package.json  run-dev.js  tsconfig.json  vite.config.ts  vocalis.doap
.github/workflows/: ci-validate.yml  flatpak.yml  release.yml  update-npm-sources.yml
.gitlab/issue_templates/: Bug.md
build-aux/: meson_post_install.py
data/: app.drey.Vocalis.data.gresource.xml  app.drey.Vocalis.desktop.in.in  app.drey.Vocalis.gschema.xml.in  app.drey.Vocalis.metainfo.xml.in.in  app.rebreda.Transcribd.data.gresource.xml  app.rebreda.Transcribd.gschema.xml.in  application.css  io.github.rebreda.Transcribd.desktop.in.in  io.github.rebreda.Transcribd.gschema.xml.in  io.github.rebreda.Transcribd.metainfo.xml.in.in  meson.build  org.gnome.SoundRecorder.data.gresource.xml  org.gnome.SoundRecorder.gschema.xml.in  org.gnome.SoundRecorder.metainfo.xml.in.in  style-hc.css  style.css
data/appdata/: meson.build  org.gnome.SoundRecorder.metainfo.xml.in.in
data/ui/: detailView.ui  help-overlay.ui  preferences.ui  recorder.ui  row.ui  window.ui
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FLATPAK.md  README.md  architecture.md  build-and-release.md  contributing.md  how-it-works.md  tauri-cicd-notes.md
gi-types/: index.d.ts
po/: LINGUAS  POTFILES.in  be.po  da.po  fi.po  he.po  hi.po  is.po  ka.po  kk.po  lt.po  oc.po  ru.po  sl.po  sv.po  tr.po  uk.po
scripts/: debug-http-transcription.mjs  debug-realtime-transcription.mjs
src/: App.tsx  app.drey.Vocalis.in  app.drey.Vocalis.src.gresource.xml.in  app.rebreda.Transcribd.in  application.js  application.ts  detailView.ts  env.d.ts  io.github.rebreda.Transcribd.src.gresource.xml.in  main.js  main.ts  meson.build  openaiClient.ts  org.gnome.SoundRecorder.in  org.gnome.SoundRecorder.src.gresource.xml.in  preferences.ts  recorder.js  recorder.ts  recorderWidget.js  recorderWidget.ts  recording.js  recording.ts  recordingList.js  recordingList.ts  recordingListWidget.js  recordingListWidget.ts  row.js  row.ts  searchIndex.ts  styles.css  transcriber.ts  transcriptionParsing.ts  utils.js  utils.ts  waveform.js  waveform.ts  window.js  window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: HomePage.tsx  LiveBar.tsx  SettingsPage.tsx  UploadPage.tsx
src/components/home/: ClipDetailPanel.tsx  HomeStatusBar.tsx  LivePanel.tsx  RecordingsPane.tsx  formatClock.ts  types.ts
src/context/: AppConfigContext.tsx
src/hooks/: useRealtimeCapture.ts  useTimelinePlayback.ts
src/lib/: apiSchemas.test.ts  apiSchemas.ts  appTypes.ts  artifactDomain.test.ts  artifactDomain.ts  audioCodec.ts  clipFinder.test.ts  clipFinder.ts  constants.ts  manifestStore.ts  metadata.ts  microphone.ts  objectHelpers.test.ts  objectHelpers.ts  openaiCompat.test.ts  openaiCompat.ts  realtime.ts  realtimeMessageUtils.test.ts  realtimeMessageUtils.ts  serialTaskQueue.test.ts  serialTaskQueue.ts  settingsUploadUtils.test.ts  settingsUploadUtils.ts  transcriptObjectPipeline.test.ts  transcriptObjectPipeline.ts  transcriptObjectStore.ts  transcriptionParsing.test.ts  transcriptionParsing.ts  transcriptionWorkflow.ts
tests/: local-api.test.mjs
types/: adw.d.ts  ambient.d.ts  gdk.d.ts  gdkpixbuf.d.ts  gio.d.ts  glib.d.ts  gobject.d.ts  graphene.d.ts  gsk.d.ts  gst.d.ts  gstaudio.d.ts  gstbase.d.ts  gstpbutils.d.ts  gstplayer.d.ts  gstvideo.d.ts  gtk.d.ts  harfbuzz.d.ts  pango.d.ts
